<resources>
    <string name="app_name">Time Series</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="user_profile_button_text">Profile</string>
    <string name="add_button_text">Add</string>
    <string name="add_ts_input_name_help">Please enter name of time series</string>
    <string name="add_ts_input_x_help_text">x value</string>
    <string name="add_ts_input_y_help_text">y value</string>
    <string name="add_ts_incorrect_input_message">Please enter valid input</string>
    <string name="error_with_localized_message">Error: </string>
    <string name="add_ts_x_input_hint">X value</string>
    <string name="add_ts_y_input_hint">Y value</string>
    <string name="add_ts_delete_button_text">Delete</string>
    <string name="logged_in_message">Logged in</string>
    <string name="failed_to_logged_in_message">Failed to logged in!</string>
    <string name="logged_out_message">Logged out</string>
    <string name="time_series_deleted_message">Time series deleted!</string>
    <string name="error">Error!</string>
    <string name="username_changed_message">Username changed!</string>
    <string name="email_change_dialog_title">Confirm</string>
    <string name="email_change_dialog_message">Do you wish to change your email?</string>
    <string name="email_change_dialog_positive_btn">Yes</string>
    <string name="email_change_dialog_negative_btn">No</string>
    <string name="email_changed_message">Email changed!</string>
    <string name="ask_password_dialog_title">Password</string>
    <string name="ask_password_dialog_message">Please input password for\u0020</string>
    <string name="ask_password_dialog_positive_btn">OK</string>
    <string name="ask_password_dialog_negative_btn">Cancel</string>
    <string name="delete_ts_dialog_title">Confirm</string>
    <string name="delete_ts_dialog_message">Do you want to delete this time series?</string>
    <string name="delete_ts_dialog_positive_btn">OK</string>
    <string name="success_deletion_message">Deleted!</string>
    <string name="delete_ts_dialog_negative_button">Cancel</string>
    <string name="add_ts_name_text">Name:</string>
    <string name="add_ts_name_input_hint">required</string>
    <string name="add_ts_data_points_text">Enter data points:</string>
    <string name="add_ts_add_more_button">Add more</string>
    <string name="add_ts_x_axis_desc_text">Enter X axis description:</string>
    <string name="add_ts_x_axis_desc_input_hint">optional</string>
    <string name="add_ts_y_axis_desc_text">Enter Y axis description:</string>
    <string name="add_ts_y_axis_desc_input_hint">optional</string>
    <string name="add_ts_save_button">Save</string>
    <string name="add_ts_save_button_needs_more_points_error_text">Graph needs at least one point</string>
    <string name="user_profile_picture_description">Avatar</string>
    <string name="user_profile_name_hint">Your profile name</string>
    <string name="user_profile_save_button">Save</string>
    <string name="user_profile_email_hint">Your email</string>
    <string name="view_ts_x_axis_description_text">X axis stands for:\u0020</string>
    <string name="view_ts_y_axis_description_text">Y axis stands for:\u0020</string>
    <string name="view_ts_x_axis_description_text_none">Description for X axis is not provided</string>
    <string name="view_ts_y_axis_description_text_none">Description for Y axis is not provided</string>
    <string name="view_ts_edit_button">Edit</string>
    <string name="view_ts_delete_button">Delete</string>
    <string name="user_profile_edit_button_text">Edit</string>
</resources>
