<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/view_time_series_upper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/view_time_series_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.65"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_time_series_creation_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="end"
                android:textStyle="italic" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/view_screen_loading_icon"
            app:indicatorColor="#1976D2"
            app:indicatorName="BallSpinFadeLoaderIndicator" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/view_time_series_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1:1"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_time_series_x_axis_description"
            android:text="@string/view_ts_x_axis_description_text"
            android:textStyle="italic"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_time_series_y_axis_description"
            android:text="@string/view_ts_y_axis_description_text"
            android:textStyle="italic"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/view_ts_edit_button"
                android:background="#FFEE58"
                style="@style/Widget.AppCompat.Button"
                android:id="@+id/view_time_series_edit_button" />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/view_ts_delete_button"
                android:background="#EF5350"
                style="@style/Widget.AppCompat.Button"
                android:id="@+id/view_time_series_delete_button"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

